fix: parse aggregate_until correctly

--- a/public/index.html
+++ b/public/index.html
@@ -604,7 +604,7 @@
 			if(data.update_error || (lastUpdatedAt && (Date.now() - lastUpdatedAt.getTime() > 3 * 60 * 1000))) {
 				toggleIssuesBanner(true, "backend")
 			} else if(data.aggregate_until) {
-				toggleIssuesBanner(true, "aggregate", data.aggregate_until)
+				toggleIssuesBanner(true, "aggregate", new Date(data.aggregate_until))
 			} else {
 				toggleIssuesBanner(false)
 			}
