--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,8 @@
 	</div>
 	<div style="display: none;" id="eventCountdown" class="flipdown mb-3"></div>
 
+	<p id="eventInfoMsg" style="display:none;" class="text-center mb-0"></p>
+
 	<div id="rankingContainer" class="row w-100 justify-content-center">
 		<div class="col-auto">
 			<ul class="nav nav-tabs border-bottom-0" id="chapterTabs" role="tablist" data-bs-theme="light" style="display: none;">
