minor wording fix

--- a/public/index.html
+++ b/public/index.html
@@ -539,7 +539,7 @@
 						label.innerText = `Your network is offline. The leaderboard cannot update!\nLast update: ${lastUpdatedAt?.toLocaleTimeString() ?? "N/A"}`
 						break
 					case "aggregate":
-						label.innerText = `The leaderboard is being aggregated until ${aggregateUntil.toLocaleTimeString()}!\nLast update: ${lastUpdatedAt?.toLocaleTimeString() ?? "N/A"}`
+						label.innerText = `The leaderboard is calculating until ${aggregateUntil.toLocaleTimeString()}!\nLast update: ${lastUpdatedAt?.toLocaleTimeString() ?? "N/A"}`
 						break
 				}
 
