--- a/public/index.html
+++ b/public/index.html
@@ -531,7 +531,7 @@
 	<div class="mt-3">
 		<div class="form-check form-switch">
 			<input class="form-check-input" type="checkbox" role="switch" id="showCCAnnounceCb" checked>
-			<label class="form-check-label" for="showCCAnnounceCb">Show Cheerful Carnival announcements</label>
+			<label class="form-check-label" for="showCCAnnounceCb">Show Cheerful Carnival streak messages</label>
 		</div>
 	</div>
 
