--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,61 @@
 			--bs-nav-link-color: white;
 			--bs-nav-link-hover-color: #d1d1d1;
 		}
+
+		.announcement-banner {
+			background-color: #ff77ab;
+			height: 32px;
+			opacity: 0.9;
+		}
+
+		.slide-parent {
+			container-type: inline-size; /* https://stackoverflow.com/a/75443310 */
+		}
+
+		.slide-child {
+			animation: scroll-anim 15s linear 1;
+		}
+
+		@keyframes fade-in-anim {
+			0% {
+				opacity: 0;
+			}
+			100% {
+				opacity: 0.9;
+			}
+		}
+
+		@keyframes fade-out-anim {
+			0% {
+				opacity: 0.9;
+			}
+			100% {
+				opacity: 0;
+			}
+		}
+
+		@keyframes scroll-anim {
+			0% {
+				transform: translateX(100cqw);
+			}
+			100% {
+				transform: translateX(-100%);
+			}
+		}
+
+		.form-check-input:checked {
+			background-color: rgb(0, 204, 187);
+			border-color: rgb(0, 204, 187);
+		}
+
+		.form-switch .form-check-input:focus:not(:checked) {
+			--bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%236cfff3'/%3e%3c/svg%3e");
+		}
+
+		.form-check-input:focus {
+			border-color: #6cfff3;
+			box-shadow: 0 0 0 .25rem rgb(23 255 236 / 25%);
+		}
 	</style>
 </head>
 <body class="d-flex flex-column justify-content-center align-items-center" style="min-height: 100%;">
@@ -37,8 +92,15 @@
 	<script src="/assets/flipdown.min.js"></script>
 	<script src="/assets/countdown.min.js"></script>
 
-	<div id="issuesBanner" style="display: none;" class="sticky-top w-100 py-3 bg-danger text-center rounded-bottom">
-		<span id="issuesBannerLabel"></span>
+	<div class="sticky-top w-100">
+		<div id="announcementBanner" style="display: none; animation: fade-in-anim 0.5s linear 1;" class="announcement-banner slide-parent py-1 overflow-hidden">
+			<div id="announcementMessageContainer" class="slide-child d-inline-block">
+				<span id="announcementMessage" class="text-white text-nowrap">The Osechi group's Team Class Leader has won in the x10 special match!</span>
+			</div>
+		</div>
+		<div id="issuesBanner" style="display: none;" class="py-3 bg-danger text-center rounded-bottom">
+			<span id="issuesBannerLabel"></span>
+		</div>
 	</div>
 
 	<div id="nextLogoContainer" class="my-3 d-flex justify-content-center align-items-center gap-1 d-none">
@@ -466,6 +528,13 @@
 	
 	<p id="errorMsg" style="display: none;">Failed to fetch updated leaderboard. Try again later.</p>
 
+	<div class="mt-3">
+		<div class="form-check form-switch">
+			<input class="form-check-input" type="checkbox" role="switch" id="showCCAnnounceCb" checked>
+			<label class="form-check-label" for="showCCAnnounceCb">Show Cheerful Carnival streak messages</label>
+		</div>
+	</div>
+
 	<footer class="py-3">
 		<span>Contact: neo@seka.ing</span>
 	</footer>
@@ -582,6 +651,54 @@
 			}
 		}
 
+		async function getAnnouncements() {
+			const res = await fetch("/api/cc-announcements")
+			if(!res.ok) {
+				throw new Error("getAnnouncements() failed: " + res.status)
+			}
+
+			const json = await res.json()
+			return json
+		}
+
+		const announceQueue = []
+		let announceDebounce = false
+		function queueAnnouncement(message) {
+			announceQueue.push(message)
+			announcementLoop()
+		}
+
+		// the only way to restart a css animation is to remove the css, cause reflow, re-add the css
+		// https://stackoverflow.com/a/45036752
+		// love html xoxo
+		function announcementLoop() {
+			if(!announceDebounce && announceQueue.length > 0) {
+				announceDebounce = true
+				document.getElementById("announcementBanner").style.animationName = "fade-in-anim"
+				document.getElementById("announcementBanner").style.display = ""
+				document.getElementById("announcementMessageContainer").classList.add("scrolling-animation-container")
+				document.getElementById("announcementMessage").style.display = ""
+				document.getElementById("announcementMessage").innerText = announceQueue.shift()
+			}
+		}
+		announcementMessageContainer.addEventListener("animationend", event => {
+			announceDebounce = false
+
+			document.getElementById("announcementMessage").style.display = "none"
+			document.getElementById("announcementBanner").style.animationName = "fade-out-anim"
+		})
+		announcementBanner.addEventListener("animationend", event => {
+			if(event.animationName !== "fade-out-anim") {
+				return
+			}
+
+			document.getElementById("announcementBanner").style.display = "none"
+			document.getElementById("announcementMessageContainer").classList.remove("scrolling-animation-container")
+			document.getElementById("announcementMessageContainer").offsetHeight
+
+			announcementLoop()
+		})
+
 		let timerStarted = false
 		let nextTimerStarted = false
 		let lastLbUpdate
@@ -696,6 +813,21 @@
 				}
 			}
 
+			if(eventData.type === "cheerful_carnival" && document.getElementById("showCCAnnounceCb").checked) {
+				try {
+					const res = await getAnnouncements()
+					if(res.announcements.length > 0 && res.updated_at !== localStorage.getItem("lastCCAnnounce")) {
+						localStorage.setItem("lastCCAnnounce", res.updated_at)
+						
+						for(const message of res.announcements) {
+							queueAnnouncement(message)
+						}
+					}
+				} catch(ex) {
+					console.error(ex)
+				}
+			}
+
 			lastLbUpdate = new Date()
 		}
 
@@ -793,6 +925,13 @@
 				scrollTo.scrollIntoView({behavior: "smooth", block: "center"})
 			}
 		}
+
+		if(localStorage.getItem("showCCAnnounce") === "false") {
+			document.getElementById("showCCAnnounceCb").checked = false
+		}
+		document.getElementById("showCCAnnounceCb").addEventListener("change", function(event) {
+			localStorage.setItem("showCCAnnounce", this.checked.toString())
+		})
 
 		doUpdate()
 		setInterval(doUpdate, 30 * 1000)
