remove debug path

--- a/public/titles/index.html
+++ b/public/titles/index.html
@@ -223,7 +223,7 @@
 
 			honors.forEach(honor => {
 				const img = document.createElement("img")
-				img.src = "https://seka.ing" + honor.image
+				img.src = honor.image
 				img.alt = `Rank ${honor.rank} title`
 				rankImages.appendChild(img)
 			})
