--- a/public/titles/index.html
+++ b/public/titles/index.html
@@ -7,6 +7,7 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.min.css">
+	<link rel="stylesheet" href="/assets/style.css">
 	<style>
 		.select-container {
 			position: relative;
@@ -139,6 +140,10 @@
 					   onclick="event.stopPropagation()">
 				</div>
 			</div>
+			<div class="form-check form-switch mt-2">
+				<input class="form-check-input" type="checkbox" role="switch" id="useSubslotCb">
+				<label class="form-check-label" for="useSubslotCb">Subslot versions</label>
+			</div>
 		</div>
 
 		<div id="rankImages">
@@ -151,6 +156,8 @@
 	</footer>
 
 	<script type="module">
+		let selectedEvent
+
 		try {
 			const res = await fetch("/api/events")
 			const events = await res.json()
@@ -193,6 +200,7 @@
 		}
 
 		function selectEvent(event) {
+			selectedEvent = event
 			document.getElementById("selectedImage").style.display = ""
 			document.getElementById("selectedImage").src = `/assets/${event.name_key}.png`
 			document.getElementById("selectedText").textContent = event.name
@@ -223,7 +231,11 @@
 
 			honors.forEach(honor => {
 				const img = document.createElement("img")
-				img.src = honor.image
+				const url = new URL(document.location.origin + honor.image)
+				if(document.getElementById("useSubslotCb").checked) {
+					url.searchParams.append("sub", "true")
+				}
+				img.src = url.toString()
 				img.alt = `Rank ${honor.rank} title`
 				rankImages.appendChild(img)
 			})
@@ -235,6 +247,12 @@
 
 		document.getElementById("searchInput").addEventListener("input", function(event) {
 			filterOptions(this.value)
+		})
+
+		document.getElementById("useSubslotCb").addEventListener("change", function(event) {
+			if(selectedEvent) {{
+				updateRankImages(selectedEvent.honors)
+			}}
 		})
 
 		window.addEventListener("click", event => {
