--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.7">
-	<meta name="description" content="Event leaderboard tracker for Project Sekai">
-	<title>Project Sekai Event Tracker | Sekaing </title>
+	<meta name="description" content="Event leaderboard tracker for Project Sekai.">
+	<title>Project Sekai Event Tracker | Sekaing</title>
 
+	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link href="/assets/flipdown.min.css" rel="stylesheet">
 	<style>
@@ -728,11 +729,11 @@
 			
 			const eventData = data.event
 			document.getElementById("eventLogoPlaceholder").style.display = "none"
-			document.getElementById("eventLogo").setAttribute("src", `assets/${eventData.name_key}.png`)
+			document.getElementById("eventLogo").src = `assets/${eventData.name_key}.png`
 			document.getElementById("eventLogo").style.display = ""
 			if(eventData.chapter_character) {
 				document.getElementById("eventChapterCharacter").style.display = ""
-				document.getElementById("eventChapterCharacter").setAttribute("src", `assets/character_${eventData.chapter_character}.png`)
+				document.getElementById("eventChapterCharacter").src = `assets/character_${eventData.chapter_character}.png`
 			} else {
 				document.getElementById("eventChapterCharacter").style.display = "none"
 			}
@@ -764,11 +765,11 @@
 			const nextEventData = data.next_event
 			if(nextEventData) {
 				document.getElementById("nextLogoContainer").classList.remove("d-none")
-				document.getElementById("nextEventLogo").setAttribute("src", `assets/${nextEventData.name_key}.png`)
+				document.getElementById("nextEventLogo").src = `assets/${nextEventData.name_key}.png`
 
 				if(nextEventData.chapter_character) {
 					document.getElementById("nextEventChapterCharacter").style.display = ""
-					document.getElementById("nextEventChapterCharacter").setAttribute("src", `assets/character_${nextEventData.chapter_character}.png`)
+					document.getElementById("nextEventChapterCharacter").src = `assets/character_${nextEventData.chapter_character}.png`
 				}
 
 				if(nextEventData.starts_at && !nextTimerStarted) {
@@ -863,9 +864,10 @@
 				nameCellDiv.setAttribute("class", "d-flex align-items-center gap-1 username-cell")
 				if(slot.team != null) {
 					const teamImg = document.createElement("img")
-					teamImg.setAttribute("src", `/assets/team_${slot.team}.png`)
-					teamImg.setAttribute("width", "20")
-					teamImg.setAttribute("height", "20")
+					teamImg.src = `/assets/team_${slot.team}.png`
+					teamImg.width = 20
+					teamImg.height = 20
+					teamImg.alt = "Team logo"
 
 					nameCellDiv.appendChild(teamImg)
 				}
