tweak: better titles page description

--- a/public/titles/index.html
+++ b/public/titles/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Project Sekai event titles browser.">
+	<meta name="description" content="A list of Project Sekai event titles images.">
 	<title>Project Sekai Event Titles | Sekaing</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
