--- a/public/404.html
+++ b/public/404.html
@@ -11,7 +11,13 @@
 	<h1>Page not found!</h1>
 	<div class="mt-3 row justify-content-center">
 		<div class="col-7 col-md-9">
-			<img class="w-100" src="/assets/emu_sticker.png">
+			<img id="sadImage" class="w-100" src="/assets/emu_sticker.png">
 		</div>
 	</div>
+
+	<script>
+		const stamps = ["0005","0129","0162","0393","0395","0399"]
+		const rnd = stamps[Math.floor(Math.random() * stamps.length)]
+		document.getElementById("sadImage").src = `/assets/stamp${rnd}.png`
+	</script>
 </body>
