--- a/public/index.html
+++ b/public/index.html
@@ -887,6 +887,7 @@
 		}
 
 		function updateLeaderboard(table, rankings) {
+			const isBordersView = document.getElementById("showBordersCb").checked
 			const tableBody = table.querySelector("tbody")
 			while(tableBody.firstChild) {
 				tableBody.removeChild(tableBody.lastChild)
@@ -908,7 +909,7 @@
 					rankCell.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-crown w-6 h-6 text-yellow-400"><path d="M11.562 3.266a.5.5 0 0 1 .876 0L15.39 8.87a1 1 0 0 0 1.516.294L21.183 5.5a.5.5 0 0 1 .798.519l-2.834 10.246a1 1 0 0 1-.956.734H5.81a1 1 0 0 1-.957-.734L2.02 6.02a.5.5 0 0 1 .798-.519l4.276 3.664a1 1 0 0 0 1.516-.294z"></path><path d="M5 21h14"></path></svg>`
 					rankCell.ariaLabel = slot.rank.toString()
 				} else {
-					rankCell.innerText = slot.rank
+					rankCell.innerText = formatNumber(slot.rank)
 				}
 
 				nameCellDiv.setAttribute("class", "d-flex align-items-center gap-1 username-cell")
@@ -934,7 +935,7 @@
 				if([3, 10, 50].includes(slot.rank - 1)) {
 					tableRow.classList.add("class", "table-group-divider")
 				}
-				if(trackHash === slot.hash) {
+				if(trackHash === slot.hash && !isBordersView) {
 					tableRow.classList.add("table-row-tracked")
 					scrollTo = tableRow
 				}
@@ -965,6 +966,10 @@
 				tableBody.appendChild(tableRow)
 
 				tableRow.addEventListener("click", function() {
+					if(isBordersView) {
+						return
+					}
+
 					if(trackHash === slot.hash) {
 						trackHash = null
 						localStorage.removeItem("trackHash")
