--- a/public/index.html
+++ b/public/index.html
@@ -995,7 +995,7 @@
 			localStorage.setItem("showCCAnnounce", this.checked.toString())
 		})
 
-		if(localStorage.getItem("showBordersCb") === "true") {
+		if(localStorage.getItem("showBorders") === "true") {
 			document.getElementById("showBordersCb").checked = true
 		}
 		document.getElementById("showBordersCb").addEventListener("change", function(event) {
