fix: don't render new lines in usernames *sigh*

--- a/public/index.html
+++ b/public/index.html
@@ -943,7 +943,7 @@
 				}
 				const nameLabel = document.createElement("span")
 				nameLabel.setAttribute("class", "username-label")
-				nameLabel.innerText = slot.name
+				nameLabel.textContent = slot.name
 				nameCellDiv.appendChild(nameLabel)
 				nameCell.appendChild(nameCellDiv)
 
